--- a/Collections.Web/Views/ApplicationUser/Index.cshtml
+++ b/Collections.Web/Views/ApplicationUser/Index.cshtml
@@ -1,17 +1,22 @@
 ﻿@using Collections.Utilities
 @model PagedResult<Collections.ViewModel.ApplicationUserViewModel>
 
+ <a asp-controller="ApplicationUser" asp-action="Create" class="btn btn-primary"> + New</a>
+<a asp-controller="ApplicationUser" asp-action="CreateMultiple" class="btn btn-primary"> + Creata Multiple</a>
 @foreach (var item in Model.Data)
 {
     <p>@item.UserName</p>
     <p>@item.Email</p>
-    @if (item.ApplicationRoleViewModels != null)
+    <p>@item.Password</p>
+    @if (item.Roles != null)
     {
-        foreach (var role in item.ApplicationRoleViewModels)
+        foreach (var role in item.Roles)
         {
-            <button class="btn btn-sm btn-success">@role.Name</button>
+            <button class="btn btn-sm btn-secondary">@role</button>
         }
     }
+    <br />
+    <a asp-controller="ApplicationUser" asp-action="Details" asp-route-Id="@item.Id" class="btn btn-info">Details</a>
 
     <hr />
 }
